--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family: 'Poppins';
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +20,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@keyframes move {
+  from { left: -10%; }
+  to { left: 100%; }
+}
+
+.animate-move{
+  animation: move 1s infinite linear;
+}
+
+.error-toast{
+  background: linear-gradient(135deg, #f55454, #d42d2d) !important;
+}
+
+.success-toast{
+  background: linear-gradient(135deg, #31f3b2, #2dd4a2) !important;
 }
